eks/examples/podmonitor.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-prom
  namespace: istio-system
  labels:
    app: gateway
spec:
  ports:
    - name: metrics
      port: 15090
  selector:
    app: gateway
    istio: gateway
